# VideoPractice.PY

./: .pylintrc  README.md  _projectConfig.ini  pyproject.toml
Study/01.OpenCV/: index.py
VideoPractice/temp/: 1.py
VideoPractice/剪映草稿/0.模板替换/: .README.md  00.生成图片转视频的草稿-通用.py  01.生成图片转视频的草稿.py
VideoPractice/剪映草稿/0.模板替换/_res/.MUBAN-m1/: 00.README.txt  draft_content.json  draft_meta_info.json
VideoPractice/剪映草稿/0.模板替换/_res/.MUBAN-m1-B/: draft_content.json  draft_meta_info.json
VideoPractice/剪映草稿/0.模板替换/_res/.MUBAN-meiriyiju/: draft_content.json  draft_meta_info.json
VideoPractice/剪映草稿/0.模板替换/_res/.MUBAN-好句积累/: draft_content.json  draft_meta_info.json
VideoPractice/剪映草稿/1.动态合成/: 01.扫描目录.py  01.生成视频-集中式.py  02.生成视频-分布式.py  90.移动草稿和视频回到分发目录.py  V1.01.二次加工视频.py  XX.01.移动草稿和视频回到分发目录.py  index.py
VideoPractice/剪映草稿/1.动态合成/_localUtils/: __init__.py  videoHelper.py
VideoPractice/剪映草稿/1.动态拼接/: jianyingMate.py
VideoPractice/视频处理/: 01.视频截图.py
